# django-media-test

./: .gitignore  Makefile  pyproject.toml
secured_media/: apps.py  fields.py  storage.py  urls.py  utils.py  views.py
service/: settings.py  urls.py
service/apps/core/: admin.py  apps.py  fields.py  models.py
service/apps/core/migrations/: 0001_initial.py  0002_privatephoto.py  0002_publicdocument.py  0003_auto_20210606_2032.py  0003_privatedocument.py
