[tool.poetry]
name = "django-media-test"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
